main: fix layout issues in smaller screens

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -223,29 +223,200 @@ body {
 }
 
 @media (max-width: 480px) {
-	.service-card {
-		flex: 1 1 calc(50% - 2.5rem);
-	}
-
-	.menu {
-		display: none;
-	}
-
-	.home-video {
+	.container {
+		display: flex;
 		flex-direction: column;
+		justify-content: space-evenly;
 		align-items: center;
 		gap: 1rem;
 	}
 
-	.footer-content {
+	.navbar {
+		display: flex;
 		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+		height: auto;
+		margin-bottom: 5rem;
+		padding: 0.5rem;
+		text-align: center;
+		background-color: #fff;
+		box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+	}
+
+	.menu {
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-start;
+		align-items: center;
+		flex-wrap: wrap;
+		gap: 2rem;
+		width: 100%;
+		list-style: none;
+	}
+
+	.menu a {
+		padding: 0.5rem;
+		text-decoration: none;
+		transition: 0.3s;
+		background-color: #fff;
+	}
+
+	.menu a:hover {
+		border-radius: 5px;
+		background-color: #000;
+		color: #fff;
+	}
+
+	.section-title {
+		margin: 8rem 10% 0;
+		text-align: center;
+	}
+
+	.section-content {
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+		gap: 1rem;
+	}
+
+	.home-video {
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+		width: 100%;
+		max-height: unset;
+
+		video {
+			width: 100%;
+		}
+
+		p {
+			height: auto;
+			justify-self: normal;
+			text-align: justify;
+			font-size: 1.5rem;
+		}
+	}
+
+	.service-card {
+		flex: 1 1 calc(25% - 2.5rem);
+		border-radius: 1rem;
+		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+		padding: 1rem;
+		min-height: 50%;
+		text-align: center;
+	}
+
+	.service-card img {
+		max-width: 100%;
+		height: auto;
+	}
+
+	.carousel {
+		min-width: 100%;
+		height: auto;
+		overflow: hidden;
+	}
+
+	.carousel-cell {
+		h2,
+		h3 {
+			text-align: center;
+		}
+
+		img {
+			width: 100%;
+			height: auto;
+			object-fit: cover;
+		}
+	}
+
+	.carousel-content-logo-row {
+		display: flex;
+		flex-direction: column;
+		justify-self: center;
+
+		p {
+			flex: 0.5;
+			word-break: break-word;
+			justify-self: center;
+			font-size: 0.75rem;
+		}
+
+		img {
+			align-self: center;
+		}
+	}
+
+	.carousel-content-photos {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		object-fit: contain;
+	}
+
+	.footer-content {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 1rem;
+		margin-top: 1rem;
+		padding: 1.25rem;
+		background-color: #333;
+		color: #fff;
 	}
 
 	.footer-logo {
+		flex: 1;
 		justify-self: center;
+
+		img {
+			max-width: 4rem;
+			max-height: 4rem;
+		}
+	}
+
+	.footer-information {
+		flex: 1;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+		gap: 1rem;
+		width: 100%;
+
+		a {
+			color: #fff;
+			text-decoration: none;
+		}
+
+		a:hover {
+			text-decoration: underline;
+		}
 	}
 
 	.footer-social-networks {
-		flex-direction: column;
+		flex: 1;
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
+		justify-self: center;
+		gap: 2rem;
+		width: 100%;
+		height: 4rem;
+	}
+
+	.footer-social-networks a {
+		display: inline-block;
+		height: 100%;
+	}
+
+	.footer-social-networks a img {
+		max-width: 2rem;
+		max-height: 2rem;
 	}
 }
